added syntax hilighting

--- a/src/reference/02-Faq/00.md
+++ b/src/reference/02-Faq/00.md
@@ -216,16 +216,18 @@ scalacOptions in Samples := "-deprecation" :: Nil
 The example adds all of the usual compilation related settings and tasks
 to `samples`:
 
-    samples:run
-    samples:runMain
-    samples:compile
-    samples:console
-    samples:consoleQuick
-    samples:scalacOptions
-    samples:fullClasspath
-    samples:package
-    samples:packageSrc
-    ...
+```
+samples:run
+samples:runMain
+samples:compile
+samples:console
+samples:consoleQuick
+samples:scalacOptions
+samples:fullClasspath
+samples:package
+samples:packageSrc
+...
+```
 
 #### How do I add a test configuration?
 
@@ -258,9 +260,11 @@ If you want to be able to supply arguments on the command line, replace
 This run task can be configured individually by specifying the task key
 in the scope. For example:
 
-    fork in myRunTask := true
+```scala
+fork in myRunTask := true
 
-    javaOptions in myRunTask += "-Xmx6144m"
+javaOptions in myRunTask += "-Xmx6144m"
+```
 
 #### How should I express a dependency on an outside tool such as proguard?
 
@@ -280,43 +284,49 @@ As an example, consider a `proguard` task. This task needs the ProGuard
 jars in order to run the tool. First, define and add the new
 configuration:
 
-    val ProguardConfig = config("proguard") hide
+```scala
+val ProguardConfig = config("proguard") hide
 
-    ivyConfigurations += ProguardConfig
+ivyConfigurations += ProguardConfig
+```
 
 Then,
 
-    // Add proguard as a dependency in the custom configuration.
-    //  This keeps it separate from project dependencies.
-    libraryDependencies +=
-       "net.sf.proguard" % "proguard" % "4.4" % ProguardConfig.name
+```scala
+// Add proguard as a dependency in the custom configuration.
+//  This keeps it separate from project dependencies.
+libraryDependencies +=
+   "net.sf.proguard" % "proguard" % "4.4" % ProguardConfig.name
 
-    // Extract the dependencies from the UpdateReport.
-    managedClasspath in proguard := {
-        // these are the types of artifacts to include
-        val artifactTypes: Set[String] = (classpathTypes in proguard).value
-        Classpaths.managedJars(proguardConfig, artifactTypes, update.value)
-    }
+// Extract the dependencies from the UpdateReport.
+managedClasspath in proguard := {
+    // these are the types of artifacts to include
+    val artifactTypes: Set[String] = (classpathTypes in proguard).value
+    Classpaths.managedJars(proguardConfig, artifactTypes, update.value)
+}
 
-    // Use the dependencies in a task, typically by putting them
-    //  in a ClassLoader and reflectively calling an appropriate
-    //  method.
-    proguard := {
-        val cp: Seq[File] = (managedClasspath in proguard).value
-      // ... do something with , which includes proguard ...
-    }
+// Use the dependencies in a task, typically by putting them
+//  in a ClassLoader and reflectively calling an appropriate
+//  method.
+proguard := {
+    val cp: Seq[File] = (managedClasspath in proguard).value
+  // ... do something with , which includes proguard ...
+}
+```
 
 Defining the intermediate classpath is optional, but it can be useful
 for debugging or if it needs to be used by multiple tasks. It is also
 possible to specify artifact types inline. This alternative `proguard`
 task would look like:
 
-    proguard := {
-       val artifactTypes = Set("jar")
-        val cp: Seq[File] =
-          Classpaths.managedJars(proguardConfig, artifactTypes, update.value)
-      // ... do something with , which includes proguard ...
-    }
+```scala
+proguard := {
+   val artifactTypes = Set("jar")
+    val cp: Seq[File] =
+      Classpaths.managedJars(proguardConfig, artifactTypes, update.value)
+  // ... do something with , which includes proguard ...
+}
+```
 
 #### How would I change sbt's classpath dynamically?
 
@@ -347,20 +357,21 @@ such as in the `onLoad` setting (described below) or in a
 component and reloads sbt if they were not already added. Note that
 reloading will drop the user's session state.
 
-    def augment(extra: Seq[File])(s: State): State =
-    {
-        // Get the component provider
-      val cs: xsbti.ComponentProvider = s.configuration.provider.components()
+```scala
+def augment(extra: Seq[File])(s: State): State = {
+    // Get the component provider
+  val cs: xsbti.ComponentProvider = s.configuration.provider.components()
 
-        // Adds the files in 'extra' to the "extra" component
-        //   under an exclusive machine-wide lock.
-        //   The returned value is 'true' if files were actually copied and 'false'
-        //   if the target files already exists (based on name only).
-      val copied: Boolean = s.locked(cs.lockFile, cs.addToComponent("extra", extra.toArray))
+    // Adds the files in 'extra' to the "extra" component
+    //   under an exclusive machine-wide lock.
+    //   The returned value is 'true' if files were actually copied and 'false'
+    //   if the target files already exists (based on name only).
+  val copied: Boolean = s.locked(cs.lockFile, cs.addToComponent("extra", extra.toArray))
 
-        // If files were copied, reload so that we use the new classpath.
-      if(copied) s.reload else s
-    }
+    // If files were copied, reload so that we use the new classpath.
+  if(copied) s.reload else s
+}
+```
 
 #### How can I take action when the project is loaded or unloaded?
 
@@ -373,34 +384,38 @@ hooks are global, modifying this setting typically involves composing a
 new function with the previous value. The following example shows the
 basic structure of defining `onLoad`:
 
-    // Compose our new function 'f' with the existing transformation.
-    {
-      val f: State => State = ...
-      onLoad in Global := {
-        val previous = (onLoad in Global).value
-        f compose previous
-      }
-    }
+```scala
+// Compose our new function 'f' with the existing transformation.
+{
+  val f: State => State = ...
+  onLoad in Global := {
+    val previous = (onLoad in Global).value
+    f compose previous
+  }
+}
+```
 
 #### Example of project load/unload hooks
 
 The following example maintains a count of the number of times a project
 has been loaded and prints that number:
 
-    {
-      // the key for the current count
-      val key = AttributeKey[Int]("loadCount")
-      // the State transformer
-      val f = (s: State) => {
-        val previous = s get key getOrElse 0
-        println("Project load count: " + previous)
-        s.put(key, previous + 1)
-      }
-      onLoad in Global := {
-        val previous = (onLoad in Global).value
-        f compose previous
-      }
-    }
+```scala
+{
+  // the key for the current count
+  val key = AttributeKey[Int]("loadCount")
+  // the State transformer
+  val f = (s: State) => {
+    val previous = s get key getOrElse 0
+    println("Project load count: " + previous)
+    s.put(key, previous + 1)
+  }
+  onLoad in Global := {
+    val previous = (onLoad in Global).value
+    f compose previous
+  }
+}
+```
 
 ### Errors
 
@@ -413,39 +428,47 @@ will stop loading.
 In this example, we try to append a library to `libraryDependencies`
 before it is initialized with an empty sequence.
 
-    object MyBuild extends Build {
-      val root = Project(id = "root", base = file("."),
-        settings = Seq(
-          libraryDependencies += "commons-io" % "commons-io" % "1.4" % "test"
-        )
-      ).disablePlugins(plugins.IvyModule)
-    }
+```scala
+object MyBuild extends Build {
+  val root = Project(id = "root", base = file("."),
+    settings = Seq(
+      libraryDependencies += "commons-io" % "commons-io" % "1.4" % "test"
+    )
+  ).disablePlugins(plugins.IvyModule)
+}
+```
 
 To correct this, include the IvyModule plugin settings, which includes
 `libraryDependencies := Seq()`. So, we just drop the explicit disabling.
 
-    object MyBuild extends Build {
-      val root = Project(id = "root", base = file("."),
-        settings = Seq(
-          libraryDependencies += "commons-io" % "commons-io" % "1.4" % "test"
-        )
-      )
-    }
+```scala
+object MyBuild extends Build {
+  val root = Project(id = "root", base = file("."),
+    settings = Seq(
+      libraryDependencies += "commons-io" % "commons-io" % "1.4" % "test"
+    )
+  )
+}
+```
 
 A more subtle variation of this error occurs when using
 [scoped settings][Scopes].
 
-    // error: Reference to uninitialized setting
-    settings = Seq(
-      libraryDependencies += "commons-io" % "commons-io" % "1.2" % "test",
-      fullClasspath := fullClasspath.value.filterNot(_.data.name.contains("commons-io"))
-    )
+```scala
+// error: Reference to uninitialized setting
+settings = Seq(
+  libraryDependencies += "commons-io" % "commons-io" % "1.2" % "test",
+  fullClasspath := fullClasspath.value.filterNot(_.data.name.contains("commons-io"))
+)
+```
 
 This setting varies between the test and compile scopes. The solution is
 use the scoped setting, both as the input to the initializer, and the
 setting that we update.
 
-    fullClasspath in Compile := (fullClasspath in Compile).value.filterNot(_.data.name.contains("commons-io"))
+```scala
+fullClasspath in Compile := (fullClasspath in Compile).value.filterNot(_.data.name.contains("commons-io"))
+```
 
 ### Dependency Management
 
@@ -455,9 +478,11 @@ This error occurs when the published checksum, such as a sha1 or md5
 hash, differs from the checksum computed for a downloaded artifact, such
 as a jar or pom.xml. An example of such an error is:
 
-    [warn]  problem while downloading module descriptor:
-    http://repo1.maven.org/maven2/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.pom:
-    invalid sha1: expected=ad3fda4adc95eb0d061341228cc94845ddb9a6fe computed=0ce5d4a03b07c8b00ab60252e5cacdc708a4e6d8 (1070ms)
+```
+[warn]  problem while downloading module descriptor:
+http://repo1.maven.org/maven2/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.pom:
+invalid sha1: expected=ad3fda4adc95eb0d061341228cc94845ddb9a6fe computed=0ce5d4a03b07c8b00ab60252e5cacdc708a4e6d8 (1070ms)
+```
 
 The invalid checksum should generally be reported to the repository
 owner (as
@@ -465,7 +490,9 @@ owner (as
 above error). In the meantime, you can temporarily disable checking with
 the following setting:
 
-    checksums in update := Nil
+```scala
+checksums in update := Nil
+```
 
 See [library management][Library-Management] for details.
 
@@ -502,17 +529,21 @@ in the same class loader as the application classes. Therefore, when
 using the Scala interpreter, it is important to set it up properly to
 avoid an error message like:
 
-    Failed to initialize compiler: class scala.runtime.VolatileBooleanRef not found.
-    ** Note that as of 2.8 scala does not assume use of the java classpath.
-    ** For the old behavior pass -usejavacp to scala, or if using a Settings
-    ** object programmatically, settings.usejavacp.value = true.
+```
+Failed to initialize compiler: class scala.runtime.VolatileBooleanRef not found.
+** Note that as of 2.8 scala does not assume use of the java classpath.
+** For the old behavior pass -usejavacp to scala, or if using a Settings
+** object programmatically, settings.usejavacp.value = true.
+```
 
 The key is to initialize the Settings for the interpreter using
 *embeddedDefaults*. For example:
 
-    val settings = new Settings
-    settings.embeddedDefaults[MyType]
-    val interpreter = new Interpreter(settings, ...)
+```scala
+ val settings = new Settings
+ settings.embeddedDefaults[MyType]
+ val interpreter = new Interpreter(settings, ...)
+```
 
 Here, MyType is a representative class that should be included on the
 interpreter's classpath and in its application class loader. For more
@@ -524,10 +555,12 @@ Similarly, use a representative class as the type argument when using
 the *break* and *breakIf* methods of *ILoop*, as in the following
 example:
 
-    def x(a: Int, b: Int) = {
-      import scala.tools.nsc.interpreter.ILoop
-      ILoop.breakIf[MyType](a != b, "a" -> a, "b" -> b )
-    }
+```scala
+def x(a: Int, b: Int) = {
+  import scala.tools.nsc.interpreter.ILoop
+  ILoop.breakIf[MyType](a != b, "a" -> a, "b" -> b )
+}
+```
 
 ### 0.7 to 0.10+ Migration
 
@@ -596,12 +629,14 @@ $app_version$. If your test code isn't thread-safe then you may want to
 change this behaviour by adding one of the following to your
 `build.sbt`:
 
-    // Execute tests in the current project serially.
-    // Tests from other projects may still run concurrently.
-    parallelExecution in Test := false
+```scala
+// Execute tests in the current project serially.
+// Tests from other projects may still run concurrently.
+parallelExecution in Test := false
 
-    // Execute everything serially (including compilation and tests)
-    parallelExecution := false
+// Execute everything serially (including compilation and tests)
+parallelExecution := false
+```
 
 #### What happened to the web development and Web Start support since 0.7?
 
