making links to reference relative

--- a/src/tutorial/ja/01-Setup/00.md
+++ b/src/tutorial/ja/01-Setup/00.md
@@ -6,7 +6,7 @@ out: Setup.html
   [Hello]: Hello.html
   [Running]: Running.html
   [MSI]: $sbt_native_package_base$$app_version$/sbt-$app_version$.msi
-  [Setup-Notes]: http://www.scala-sbt.org/release/docs/Detailed-Topics/Setup-Notes.html
+  [Setup-Notes]: ../docs/Setup-Notes.html
   [Mac]: Installing-sbt-on-Mac.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
@@ -31,9 +31,3 @@ sbt プロジェクトを作るには、以下の手順をたどる:
 ### コツと注意
 
 `sbt` の実行に上手くいかない場合は、[[Setup Notes]] のターミナルの文字エンコーディング、HTTP プロキシ、JVM のオプションにかんする説明を参照する。
-
-訳注:
-
- - 32bitOSの場合 `-Xmx1536M` だとJVMのメモリの制限によりうまくいかないので、`-Xmx1024M` などに減らす必要がある。
- - [原文のページ](http://www.scala-sbt.org/release/docs/Getting-Started/Setup.html)には、macports、homebrew、gentoo、apt、windows用のmsiのインストーラなどの方法も載っていて、ここに書いてある以外の方法でもインストールすることが可能です。
- - sbt0.13.0以降、windows の場合は、 `-Dinput.encoding=Cp1252` を指定しないと矢印キーでの履歴参照などが文字化けするようなので、設定してください。 [詳しい議論などはここを参照](https://github.com/sbt/sbt/issues/871)
