--- a/src/reference/04-Detailed-Topics/00.md
+++ b/src/reference/04-Detailed-Topics/00.md
@@ -19,4 +19,4 @@ Other resources include the
 [How to][Howto] and
 [Developer’s Guide][Developers-Guide]
 sections in this reference, and the
-[API Documentation](../../api/index.html)
+[API Documentation](../api/index.html)
