About IDE support for sbt

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -581,12 +581,8 @@ you want to insulate your builds from the ivy cache being cleared, set
 `lib_managed` in 0.7.x).
 
 This does mean that existing solutions for sharing libraries with your
-favoured IDE may not work. There are $app_version$ plugins for IDEs being
-developed:
-
-- [IntelliJ IDEA](https://github.com/mpeltonen/sbt-idea)
-- [Netbeans](https://github.com/remeniuk/sbt-netbeans-plugin)
-- [Eclipse](https://github.com/typesafehub/sbteclipse)
+favoured IDE may not work. Refer to [Community Plugins page][Community-Plugins]
+for a list of currently available plugins for your IDE.
 
 #### What are the commands I can use in $app_version$ vs. 0.7?
 
