remove plugin creation from the getting started guide.

--- a/src/tutorial/ja/01-Setup/00.md
+++ b/src/tutorial/ja/01-Setup/00.md
@@ -6,7 +6,7 @@ out: Setup.html
   [Hello]: Hello.html
   [Running]: Running.html
   [MSI]: $sbt_native_package_base$$app_version$/sbt-$app_version$.msi
-  [Setup-Notes]: ../docs/Setup-Notes.html
+  [Setup-Notes]: ../../docs/Setup-Notes.html
   [Mac]: Installing-sbt-on-Mac.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
