translate installing sbt

--- a/src/tutorial/zh/01-Setup/00.md
+++ b/src/tutorial/zh/01-Setup/00.md
@@ -12,24 +12,21 @@ out: Setup.html
   [Linux]: Installing-sbt-on-Linux.html
   [Manual-Installation]: Manual-Installation.html
 
-Installing sbt
+安装sbt
 --------------
 
-To create an sbt project, you'll need to take these steps:
+创建一个sbt工程, 你需要经过以下几步:
 
--   Install sbt and create a script to launch it.
--   Setup a simple [hello world][Hello] project
-    -   Create a project directory with source files in it.
-    -   Create your build definition.
--   Move on to [running][Running] to learn how to run sbt.
--   Then move on to [.sbt build definition][Basic-Def] to learn more
-    about build definitions.
+-   安装sbt并且创建脚本来运行它.
+-   建立一个简单的[hello world][Hello]工程
+    -   创建一个工程目录并且将源文件放在其中.
+    -   创建你的构建定义.
+-   继续去[运行sbt][Running]学习怎么运行sbt.
+-   然后去[.sbt构建定义][Basic-Def]学习更多关于构建的定义.
 
-Ultimately, the installation of sbt boils down to a launcher JAR and a shell script,
-but depending on your platform, we provide several ways to make the process less tedious.
-Head over to the installation steps for [Mac][Mac], [Windows][Windows], [Linux][Linux], or [manual installation][Manual-Installation].
 
-### Tips and Notes
+最后, 安装步骤就简化为一个Jar文件和一个Shell脚本, 但是取决于你的平台, 我们提供了好几种方式来使得步骤不是那儿单调. [Mac][Mac], [Windows][Windows], [Linux][Linux], [手动安装][Manual-Installation]提供了相应的安装步骤.
 
-If you have any trouble running sbt, see [Setup Notes][Setup-Notes] on
-terminal encodings, HTTP proxies, and JVM options.
+### 提示和技巧
+
+如果你在运行sbt时遇到任何问题, 查看[安装建议][Setup-Notes]中的终端编码, HTTP代理, JVM参数.
