--- a/src/tutorial/zh/00.md
+++ b/src/tutorial/zh/00.md
@@ -6,25 +6,6 @@ out: index.html
   [Scopes]: Scopes.html
   [More-About-Settings]: More-About-Settings.html
 
-Getting Started with sbt
+sbt 入门
 ========================
-
-sbt uses a small number of concepts to support flexible and powerful
-build definitions. There are not that many concepts, but sbt is not
-exactly like other build systems and there are details you *will*
-stumble on if you haven't read the documentation.
-
-The Getting Started Guide covers the concepts you need to know to create
-and maintain an sbt build definition.
-
-It is *highly recommended* to read the Getting Started Guide!
-
-If you are in a huge hurry, the most important conceptual background can
-be found in [.sbt build definition][Basic-Def], [scopes][Scopes], and
-[more kinds of setting][More-About-Settings]. But we don't promise that
-it's a good idea to skip the other pages in the guide.
-
-It's best to read in order, as later pages in the Getting Started Guide
-build on concepts introduced earlier.
-
-Thanks for trying out sbt and *have fun*!
+翻译中
