--- a/src/tutorial/zh-cn/00.md
+++ b/src/tutorial/zh-cn/00.md
@@ -8,4 +8,16 @@ out: index.html
 
 sbt 入门
 ========================
-翻译中
+
+sbt 使用少数的几个概念来支撑它灵活并且强大的构建定义。其实没有太多的概念，但是 sbt 并不完全像其他的构建体系，而且如果你没有看过文档的话，你 *将会* 偶然遇到一些细节问题。
+
+这篇入门指南覆盖了一些你在创建和维护一个 sbt 构建定义时需要知道的概念。
+
+*强烈建议*看完该入门指南！
+
+如果你非常急切，你可以直接直接进入以下几小节了解最重要的概念背景 [.sbt 构建定义][Basic-Def]，[scopes][Scopes]，[更多项设置][More-About-Settings]。
+但是我们不保证跳过该指南中的其他小节是一个好的想法。
+
+最好是按顺序阅读，因为该指南中后面的小节建立在前面介绍的概念的基础上。
+
+感谢尝试 sbt 并且 *体验其中的乐趣* ！
