Fix invalid links in japanese tutorial

--- a/src/tutorial/ja/01-Setup/00.md
+++ b/src/tutorial/ja/01-Setup/00.md
@@ -30,4 +30,4 @@ sbt プロジェクトを作るには、以下の手順をたどる:
 
 ### コツと注意
 
-`sbt` の実行に上手くいかない場合は、[[Setup Notes]] のターミナルの文字エンコーディング、HTTP プロキシ、JVM のオプションにかんする説明を参照する。
+`sbt` の実行に上手くいかない場合は、[Setup Notes][Setup-Notes] のターミナルの文字エンコーディング、HTTP プロキシ、JVM のオプションにかんする説明を参照する。
