Use HTTPS urls in preference, where available

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -31,7 +31,7 @@ Frequently Asked Questions
 
 #### How do I get help?
 
-Please use [Stack Overflow](http://stackoverflow.com/tags/sbt) for questions. Use the
+Please use [Stack Overflow](https://stackoverflow.com/tags/sbt) for questions. Use the
 [sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev) for comments and discussions about sbt
 development.
 
@@ -51,12 +51,12 @@ something is a bug.
 
 #### How can I help?
 
--   Answer questions on [Stack Overflow](http://stackoverflow.com/tags/sbt).
+-   Answer questions on [Stack Overflow](https://stackoverflow.com/tags/sbt).
 -   Fix mistakes that you notice on the wiki.
 -   Make [bug reports](https://github.com/sbt/sbt/issues) that are
     clear and reproducible.
 -   Discuss development on the [sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev).
--   Fix issues that affect you. [Fork, fix, and submit a pull request](http://help.github.com/fork-a-repo/).
+-   Fix issues that affect you. [Fork, fix, and submit a pull request](https://help.github.com/fork-a-repo/).
 -   Implement features that are important to you.
     See [Contributing to sbt][Contributing-to-sbt] for more details.
 
@@ -237,7 +237,7 @@ See the [Additional test configurations][additional-test-configurations] section
 #### How can I create a custom run task, in addition to `run`?
 
 This answer is extracted from a
-[mailing list discussion](http://groups.google.com/group/simple-build-tool/browse_thread/thread/4c28ee5b7e18b46a/).
+[mailing list discussion](https://groups.google.com/group/simple-build-tool/browse_thread/thread/4c28ee5b7e18b46a/).
 
 Read the Getting Started Guide up to
 [custom settings][Custom-Settings] for background.
@@ -480,7 +480,7 @@ as a jar or pom.xml. An example of such an error is:
 
 ```
 [warn]  problem while downloading module descriptor:
-http://repo1.maven.org/maven2/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.pom:
+https://repo1.maven.org/maven2/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.pom:
 invalid sha1: expected=ad3fda4adc95eb0d061341228cc94845ddb9a6fe computed=0ce5d4a03b07c8b00ab60252e5cacdc708a4e6d8 (1070ms)
 ```
 
@@ -677,13 +677,13 @@ Getting Started Guide for details.
   </tr>
 
   <tr>
-    <td><a href="http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html">FileUtilities</a></td>
+    <td><a href="https://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/FileUtilities\$object.html">FileUtilities</a></td>
     <td><a href="../api/sbt/IO\$.html)">IO</a></td>
   </tr>
 
   <tr>
-    <td><a href="http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html">Path class</a> and
-    <a href="http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html">object</a></td>
+    <td><a href="https://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path.html">Path class</a> and
+    <a href="https://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/Path\$.html">object</a></td>
     <td>
       <a href="../api/sbt/Path\$.html">Path object</a>, <tt>File</tt>,
       <a href="../api/sbt/RichFile.html">RichFile</a>
@@ -692,7 +692,7 @@ Getting Started Guide for details.
   </tr>
 
   <tr>
-    <td><a href="http://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html">PathFinder class</a></td>
+    <td><a href="https://simple-build-tool.googlecode.com/svn/artifacts/latest/api/sbt/PathFinder.html">PathFinder class</a></td>
     <td>
       <tt>Seq[File]</tt>, 
       <a href="../api/sbt/PathFinder.html)">PathFinder class</a>,
