--- a/src/reference/00.md
+++ b/src/reference/00.md
@@ -32,7 +32,7 @@ yourself a *lot* of time if you have the right understanding of the big
 picture up-front.
 All documentation may be found via the table of contents included at the end of every page.
 
-Use [Stack Overflow](http://stackoverflow.com/tags/sbt) for
+Use [Stack Overflow](https://stackoverflow.com/tags/sbt) for
 questions. Use the [sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev) for discussing sbt
 development. Use [@scala_sbt](https://twitter.com/scala_sbt) for questions and discussions.
 
