fix typo and change some wording.

--- a/src/tutorial/zh-cn/01-Setup/00.md
+++ b/src/tutorial/zh-cn/01-Setup/00.md
@@ -21,12 +21,12 @@ out: Setup.html
 -   建立一个简单的 [hello world][Hello] 工程
     -   创建一个工程目录并且将源文件放在其中。
     -   创建你的构建定义。
--   继续去[运行 sbt][Running] 学习怎么运行 sbt。
--   然后去 [.sbt 构建定义][Basic-Def]学习更多关于构建的定义。
+-   继续前往 [运行 sbt][Running] 学习怎么运行 sbt。
+-   然后前往 [.sbt 构建定义][Basic-Def] 学习更多关于构建的定义。
 
 
-最后，安装步骤就简化为一个 Jar 文件和一个 Shell 脚本，但是取决于你的平台，我们提供了好几种方式来使得步骤不是那儿单调。 [Mac][Mac]，[Windows][Windows]，[Linux][Linux]，[手动安装][Manual-Installation]提供了相应的安装步骤。
+最后，安装步骤就简化为一个 Jar 文件和一个 Shell 脚本，但是取决于你的平台，我们提供了好几种方式来使得步骤不是那么单调。 [Mac][Mac]，[Windows][Windows]，[Linux][Linux]，[手动安装][Manual-Installation] 提供了相应的安装步骤。
 
 ### 提示和技巧
 
-如果你在运行 sbt 时遇到任何问题，查看[安装建议][Setup-Notes]中的终端编码，HTTP 代理，JVM 参数。
+如果你在运行 sbt 时遇到任何问题，查看 [安装建议][Setup-Notes] 中的终端编码（terminal encoding），HTTP 代理，JVM 参数。
