improve the blurb on tech preview

--- a/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
+++ b/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
@@ -4,9 +4,9 @@ out: sbt-0.13-Tech-Previews.html
 
 ## sbt 0.13.5+ Technology Previews
 
-sbt 0.13.5+ releases of sbt are technology previews of what's to come to sbt 1.0 with enhancements like [auto plugins][Auto-Plugins-Post] and the necessary APIs changes and launcher for "sbt as a server.", defined in the sbt-remote-control project.
+sbt 0.13.5+ releases of sbt are technology previews of what's to come to sbt 1.0 with enhancements like [auto plugins][Auto-Plugins-Post], launcher enhacements for sbt server, defined in the sbt-remote-control project, and other necessary API changes.
 
-These releases maintain binary compatibility with plugins that are published against sbt 0.13.0, but adds new features in preparation of sbt 1.0. This allows us to test new ideas like auto plugins and performance improvements on dependency resolution.
+These releases maintain binary compatibility with plugins that are published against sbt 0.13.0, but add new features in preparation for sbt 1.0. The tech previews allow us to test new ideas like auto plugins and performance improvements on dependency resolution; the build users can try new features without losing the existing plugin resources; and plugin authors can gradually migrate to the new plugin system before sbt 1.0 arrives.
 
 ## sbt 0.13.7
 
