keep track of [85c5f2f](https://github.com/sbt/website/commit/85c5f2f1172d0c927d050c9f2f3fe347a9edaba9)
and fix several typos in document.

--- a/src/tutorial/zh-cn/00.md
+++ b/src/tutorial/zh-cn/00.md
@@ -9,7 +9,7 @@ out: index.html
 sbt 入门
 ========================
 
-sbt 使用少数的几个概念来支撑它灵活并且强大的构建定义。其实没有太多的概念，但是 sbt 并不完全像其他的构建体系，而且如果你没有看过文档的话，你 *将会* 偶然遇到一些细节问题。
+sbt 使用少数的几个概念来支撑它灵活并且强大的构建定义。其实没有太多的概念，但是 sbt 并不完全像其他的构建体系，而且如果你没有看过文档的话，你偶尔 *将会* 遇到一些细节问题。
 
 这篇入门指南覆盖了一些你在创建和维护一个 sbt 构建定义时需要知道的概念。
 
