--- a/src/tutorial/01-Setup/00.md
+++ b/src/tutorial/01-Setup/00.md
@@ -11,6 +11,7 @@ out: Setup.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
   [Manual-Installation]: Manual-Installation.html
+  [Activator-Installation]: Activator-Installation.html
 
 Installing sbt
 --------------
@@ -25,9 +26,12 @@ To create an sbt project, you'll need to take these steps:
 -   Then move on to [.sbt build definition][Basic-Def] to learn more
     about build definitions.
 
-Ultimately, the installation of sbt boils down to a launcher JAR and a shell script,
-but depending on your platform, we provide several ways to make the process less tedious.
-Head over to the installation steps for [Mac][Mac], [Windows][Windows], [Linux][Linux], or [manual installation][Manual-Installation].
+Ultimately, the installation of sbt boils down to a launcher JAR
+and a shell script, but depending on your platform, we provide
+several ways to make the process less tedious.  Head over to the
+installation steps for [Mac][Mac], [Windows][Windows],
+[Linux][Linux], [Typesafe Activator][Activator-Installation], or
+[manual installation][Manual-Installation].
 
 ### Tips and Notes
 
