Track sbt/website@b0290defc8a5d51f4bc7ef2836d060d5bd93c12e

--- a/src/tutorial/ja/01-Setup/00.md
+++ b/src/tutorial/ja/01-Setup/00.md
@@ -11,6 +11,7 @@ out: Setup.html
   [Windows]: Installing-sbt-on-Windows.html
   [Linux]: Installing-sbt-on-Linux.html
   [Manual-Installation]: Manual-Installation.html
+  [Activator-Installation]: Activator-Installation.html
 
 sbt のインストール
 ----------------
@@ -26,7 +27,8 @@ sbt プロジェクトを作るには、以下の手順をたどる:
 
 最終的には、sbt のインストールはランチャー JAR とシェルスクリプトの設置という 2つに絞られるけども、
 プラットフォームによってもう少し簡単なインストール方法をいくつか提供する。
-[Mac][Mac]、[Windows][Windows]、[Linux][Linux] もしくは[手動インストール][Manual-Installation]の手順に進んでほしい。
+[Mac][Mac]、[Windows][Windows]、[Linux][Linux]、[Typesafe Activator][Activator-Installation]、
+もしくは[手動インストール][Manual-Installation]の手順に進んでほしい。
 
 ### コツと注意
 
