How can I get help?

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -31,34 +31,15 @@ Frequently Asked Questions
 
 #### How do I get help?
 
-Please use [Stack Overflow](https://stackoverflow.com/tags/sbt) for questions. Use the
-[sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev) for comments and discussions about sbt
-development.
-
--   Please state the problem or question clearly and provide enough
-    context. Code examples and build transcripts are often useful when
-    appropriately edited.
--   Providing small, reproducible examples is a good way to get help
-    quickly.
--   Include relevant information such as the version of sbt and Scala
-    being used.
+-  See [Get Involved](http://www.scala-sbt.org/community.html#how-can-I-get-help)
 
 #### How do I report a bug?
 
-Please use the [issue tracker](https://github.com/sbt/sbt/issues) to
-report confirmed bugs. Do not use it to ask questions or to determine if
-something is a bug.
+-  See [Get Involved](http://www.scala-sbt.org/community.html#how-can-I-help)
 
 #### How can I help?
 
--   Answer questions on [Stack Overflow](https://stackoverflow.com/tags/sbt).
--   Fix mistakes that you notice on the wiki.
--   Make [bug reports](https://github.com/sbt/sbt/issues) that are
-    clear and reproducible.
--   Discuss development on the [sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev).
--   Fix issues that affect you. [Fork, fix, and submit a pull request](https://help.github.com/fork-a-repo/).
--   Implement features that are important to you.
-    See [Contributing to sbt][Contributing-to-sbt] for more details.
+-  See [Get Involved](http://www.scala-sbt.org/community.html#how-can-I-help)
 
 ### Usage
 
