--- a/src/reference/03-Developers-Guide/09-Launcher/00.md
+++ b/src/reference/03-Developers-Guide/09-Launcher/00.md
@@ -2,9 +2,11 @@
 out: Sbt-Launcher.html
 ---
 
-Sbt Launcher
+sbt Launcher
 ------------
 
 The sbt launcher provides a generic container that can load and run
 programs resolved using the Ivy dependency manager. Sbt uses this as its
 own deployment mechanism.
+
+The code is hosted at [sbt/launcher](https://github.com/sbt/launcher).
