Updates based on review

--- a/src/reference/03-Developers-Guide/00.md
+++ b/src/reference/03-Developers-Guide/00.md
@@ -9,11 +9,11 @@ out: Developers-Guide.html
 Developer's Guide (Work in progress)
 ------------------------------------
 
-This is the set of documentation about the Architecture of sbt.
+This is the set of documentation about the future architecture of sbt.
 The target audience of this document is the sbt plugin authors
 and sbt developers. See also [How can I help?][HowCanIHelp]
 
-### Modularization
+### Plans for modularization
 
 The process we aim to take for sbt 1.0 is to disassemble sbt into small modules.
 To be clear sbt 0.13's codebase already does consists of numerous subprojects.
@@ -39,6 +39,10 @@ The sbt launcher provides a generic container that can load and run
 programs resolved using the Ivy dependency manager. Sbt uses this as its
 own deployment mechanism. (Hosted at [sbt/launcher](https://github.com/sbt/launcher))
 
+#### [sbt/sbt-remote-control](https://github.com/sbt/sbt-remote-control)
+
+sbt-remote-control is the project name for sbt client-server via JSON API.
+
 #### [sbt/website](https://github.com/sbt/website)
 
 This website's source.
@@ -46,6 +50,33 @@ This website's source.
 #### [sbt/sbt](https://github.com/sbt/sbt)
 
 Most of the sbt codebase still lives here.
+Here are some of the potential modules we can pull out.
+
+#### Compiler API
+
+At the core of sbt is the incremental compiler of Scala. This API is so fundamental,
+that we now seldom think of it as a feature of sbt.
+There are number of subprojects/classes involved that are actually internal details
+that we should use this opportunity to hide.
+
+#### Library management API
+
+sbt's library management system is based on Apache Ivy, and the concepts and
+terminology around library management system is borrowed from Apache Ivy.
+However in 0.13.x technology preview series there has been a number of improvements
+that goes beyond wrapping Ivy, namely cached resolution and Maven repository resolver.
+
+#### IO API
+
+Low level API to deal with files and directories.
+
+#### Completion API
+
+Combinator parser with tab completion.
+
+#### Task DSL
+
+This is the part that's exposed to `build.sbt`.
 
 ### Towards sbt 1.0
 
@@ -78,8 +109,8 @@ that's accessible via JSON API and a text-based client.
 
 Source compatibility means that a build source that worked for sbt version A
 works for another version B without modification.
-For example, a build defition created for sbt 1.0.0 should work also for sbt 1.1.0
-(if we adopted Semantic Versioning).
+Our goal for sbt 1.0 is to adopt Semantic Versioning, and maintain
+source compatibility of the build during 1.x.y.
 
 #### Binary compatibility of the plugins
 
@@ -87,6 +118,8 @@ Binary compatibility ("bincompat") of the plugins means that a plugin
 that was published  for sbt version A works for another version B without recompilaition.
 sbt 0.13 has kept binary compatibility for 18 months as of March 2015.
 The stability here helps maintaining sbt plug ecosystem.
+Our goal for sbt 1.0 is to adopt Semantic Versioning, and maintain
+binary compatibility of the build during 1.x.y.
 
 From the development perspective, maintaining binary compatibility becomes
 an additional constraint that we need to worry about whenever we make changes.
