Copying notes again

--- a/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
+++ b/src/reference/01-General-Info/90-Changes/48-sbt-0.13-Tech-Previews.md
@@ -14,6 +14,7 @@ These releases maintain binary compatibility with plugins that are published aga
   [@eed3si9n]: https://github.com/eed3si9n
   [@gkossakowski]: https://github.com/gkossakowski
   [@jsuereth]: https://github.com/jsuereth
+
   [@aerskine]: https://github.com/aerskine
   [@ajozwik]: https://github.com/ajozwik
   [@dwickern]: https://github.com/dwickern
@@ -54,6 +55,7 @@ These releases maintain binary compatibility with plugins that are published aga
   [1771]: https://github.com/sbt/sbt/pull/1771
   [1787]: https://github.com/sbt/sbt/pull/1787
   [1793]: https://github.com/sbt/sbt/pull/1793
+  [1799]: https://github.com/sbt/sbt/pull/1799
   [1817]: https://github.com/sbt/sbt/pull/1817
   [1818]: https://github.com/sbt/sbt/pull/1818
   [1869]: https://github.com/sbt/sbt/issues/1869
@@ -65,6 +67,7 @@ These releases maintain binary compatibility with plugins that are published aga
 
 ### Changes with compatibility implications
 
+- Disable publishing on implicitly created root project by not enabling `IvyPlugin` by default (`-Dsbt.root.ivyplugin=true` will revert this behavior). [#1871][1871]/[#1869][1869] by [@dwijnand][@dwijnand]
 - Rolls back XML parsing workaround. See below.
 - Enables cross-version support for Scala sources. See below.
 
@@ -95,13 +98,12 @@ These releases maintain binary compatibility with plugins that are published aga
 - Fixes eviction warning being too noisy. [#1615][1615] by [@eed3si9n][@eed3si9n]
 - Issues warning if multiple dependencies to a same library is found with different version. [#1634][1634] by [@eed3si9n][@eed3si9n]
 - Removes "No main class detected" warning. [#1766][1766] by [@eed3si9n][@eed3si9n]
-- Disable publishing on implicitly created root project by not enabling `IvyPlugin` by default (`-Dsbt.root.ivyplugin=true` will revert this behavior). [#1871][1871]/[#1869][1869] by [@dwijnand][@dwijnand]
 - Fixes sporadic ConcurrentModificationException from JUnitXmlTestsListener. [#1881][1881] by [@aerskine][@aerskine]
 - Fixes handling of ANSI CSI codes. [#1885][1885] by [@jsuereth][@jsuereth]
 - Exempt org.scala-lang:scala-actors-migration and org.scala-lang:scala-pickling from scala binary version checks. [#1818][1818]/[#1899][1899] by [@dwijnand][@dwijnand]
 - Fixes cached resolution handling of internal depdendencies. [#1711][1711] by [@eed3si9n][@eed3si9n]
 - Fixes cached resolution being too verbose. [#1752][1752] by [@eed3si9n][@eed3si9n]
-- Fixes cached resolution not evicting modules transitively. [#1760][#1760] by [@eed3si9n][@eed3si9n]
+- Fixes cached resolution not evicting modules transitively. [#1760][1760] by [@eed3si9n][@eed3si9n]
 
 ### Rolling back XML parsing workaround
 
